--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 </head>
 <body>
 
-    <h1>为什么这么难？</h1>
+    <h1>为什么这么难？ MILLER 凝娶斯吧！！！</h1>
 
     <p>
         <a href="CAT.html">点击查看 CAT 页面</a>
     </p>
-
+    <p>
+        <a href="bird.html">点击查看 小鸟 页面</a>
+    </p>
     <hr>
     
     <p style="color: gray; font-size: 0.9em;">
