--- a/turtle.html
+++ b/turtle.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turtle Skeleton Anatomy (Fixed Layout)</title>
+    <title>
+        </title>
     <style>
         :root {
             --bg-color: #121212;
@@ -180,8 +181,8 @@
 <body>
 
     <div style="text-align: center; margin-bottom: 10px;">
-        <h1>Turtle Skeleton Anatomy</h1>
-        <span style="color: #777; font-size: 0.9em;">(Side Cutaway View)</span>
+        <h1>T王八骨骼 这是一个从中间切开的样子 比较抽象 将就用吧</h1>
+        <span style="color: #777; font-size: 0.9em;">横切 不是课本里那个图 自己理解一下 _By Chenzhe </span>
     </div>
 
     <div class="main-container">
@@ -191,7 +192,7 @@
         <div class="canvas-area">
             <div class="drawing-wrapper">
 <pre class="skeleton-ascii">
-                  (1)
+                  (1王八壳 上方)
         ,---------------------------------------.
        /   ___________________________________   \
       /   /  (2)  (3)                         \   \
@@ -209,7 +210,7 @@
   (7)    \                                     /   (8)
    |                                          /     |
    |                                         /      |
- __|__                                      /     __|__
+ 我是王八脚___|__                                  __|_我是王八脚_
                                            /
  _________________________________________/
                (9)
